css/main.css
/* ... */
*, ::after, ::before {
	box-sizing: border-box;
}

#networking-app[v-cloak],
#recorder-app[v-cloak] {
  visibility: hidden;
}

html body *[hidden] {
	display: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	user-select: none;
}
html, body {
	display: flex;
	overflow: hidden;
	justify-content: center;
	align-items: center;
	height: 100vh;
	width: 100vw;
	font-family: Arial, Helvetica, sans-serif;
}
body {
	margin: 0;
	flex-direction: column;
	background: #aee;
	/* background-color: #faa499;
	background-image: linear-gradient(319deg, #faa499 0%, #f7dd85 37%, #ffc55c 100%); */
	background-color: #999;
	overflow: hidden;
}
body.rotated {
	transform: rotate(90deg);
	height: 100vw;
	width: 100vh;
	overflow: visible;
}

header, footer {
	overflow: hidden; /* fixes unwanted scrolling in rotated mobile mode */
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
	width: 100%;
	background: rgba(30%, 30%, 30%, 0.5);
	height: 4rem;
	background: #212121;
	color: #fdfdfd;
}
header a {
	color: inherit;
	text-decoration: none;
}
footer {
	box-shadow: inset 0px 12px 10px -10px #000;
	position: relative;
	overflow: visible;
}

header h1#logo {
	font-family: 'Baloo 2', cursive;
	font-weight: 500;
	font-style: normal;
	margin: 0 0.5em;
}

.reacter {
	display: flex;
	flex-direction: column;
	position: absolute;
	bottom: 62px;
	background: #aaa;
	border-radius: 10px;
	padding: 8px 0 4px;
	box-shadow: 2px 2px 10px #666;
	z-index: 5;
}
.reacter>span {
	display: inline-block;
	font-size: 20pt;
	padding: 4px;
	width: 58px;
	text-align: center;
}
.reacter>span:hover {
	cursor: pointer;
	transform: scale(1.5);
}
.reacter>span[disabled] {
	opacity: 0.4;
	transform: none;
}
.reacter>span.sep {
	height: 0;
	border-bottom: 1px #fff solid;
}
.reaction {
	color: #111;
	position: absolute;
	bottom: 62px;
	z-index: 5;
	font-size: 28pt;
	animation: reaction 5s ease-in 0s 1;
	text-shadow: 2px 2px 10px #666;
}

@keyframes reaction {
	0%   { opacity: 0.0; transform: translateY(40px) scale(0.5);}
	5%   { opacity: 1.0; transform: translateY( 0px)  scale(1.0);}
	90%  { opacity: 1.0; transform: translateY(-40px) scale(1.0);}
	100% { opacity: 0.0; transform: translateY(-80px) scale(2.0);}
}
@keyframes minireaction { /* mobile version - reduced travel distance*/
	0%   { opacity: 0.0; transform: translateY(40px) scale(0.5);}
	5%   { opacity: 1.0; transform: translateY(0px)  scale(1.0);}
	90%  { opacity: 1.0; transform: translateY(0px) scale(1.0);}
	100% { opacity: 0.0; transform: translateY(10px) scale(1.5);}
}

.copy {
	color: #888;
	display: inline-block;
	margin: 0 1em;
	font-family: 'Baloo 2';
	font-size: 14pt;
}
.copy a {
	color: inherit;
	text-decoration: none;
}
.copy a:hover {
	text-decoration: underline;
}

.content {
	width: 100%;
	flex-grow: 1;
	display: flex;
	flex-direction: row;
}

.chat-sidebar {
	background: red;
	flex-basis: 0%;
	transition: flex-basis 0.2s ease;
}
.chat-sidebar.open {
	flex-basis: 50%;
}

.main-content {
	overflow: hidden;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	flex-basis: 100%;
}

.bar {
	padding: 2rem;
	display: flex;
	width: 100%;
	flex-direction: row;
	justify-content: space-between;
	opacity: 1;
	transition: opacity 0.1s ease 0.2s, display 0 linear 0.3s;
}

.info-row {
	display: flex;
	flex-direction: row;
	justify-content: center;
	position: relative;
	height: 4em;
}

header.bar,
footer.bar {
	padding: 0 0.5rem;
}

.bar>div {
	flex: 1;
	display: flex;
	justify-content: center;
	position: relative;
}
.bar>div:first-child {
	justify-content: flex-start;
}
.bar>div:last-child {
	justify-content: flex-end;
}
.bar>div:first-child:last-child {
	justify-content: center;
}

.bar>div>div {
	display: flex;
}
.bar>div>div.staffs {
	display: block;
}

.bar>div>div.isRecording {
	box-shadow: 0 0 6px 2px #b00;
	border-radius: 0.5rem;
}
.bar>div>div.isPlaying {
	box-shadow: 0 0 6px 2px #099;
	border-radius: 0.5rem;
}

/* tabs */
.bar>div.tabs {
	/* snap to top */
	align-self: flex-start;
}
.bar>.tabs button {
	border: none;
	background-color: #888;
	color: #5a5a5a;
	border-bottom-left-radius: .5rem;
	border-bottom-right-radius: .5rem;
	box-shadow: inset 0px 12px 10px -10px #555;
	/* font-family: 'Baloo 2'; */
}
.bar>.tabs button+button {
	box-shadow: inset 8px 12px 10px -10px #555;
}
.bar>.tabs button::before {
	content: attr(data-user-dots);
	position: absolute;
	top: -.5rem;
	left: 0;
	right: 0;
	font-weight: bold;
}
.bar>.tabs button::after {
	display: none;
}
.bar>.tabs button:hover {
	background-color: #9a9a9a;
	color: #555;
}
.bar>.tabs button.on {
	background-color: #999;
	color: #555;
	/* box-shadow: 0px 12px 10px -10px #000; */
	box-shadow: 0px 5px 5px -2px #000;
}
.bar>.tabs button:first-child,
.bar>.tabs button:last-child {
	border-top-left-radius: 0;
	border-top-right-radius: 0;
}

/* other buttons */
.bar :is(button, select),
.bar.tool-bar label,
.bar input[type=text] {
	min-width: 3.5rem;
	text-align: center;
	text-align-last: center;
	display: flex;
	border: 1px solid #999;
	cursor: pointer;
	margin: 0;
	padding: .6rem 1rem 0.4rem;
	font-size: 110%;
	-webkit-tap-highlight-color: transparent;
	border-right-width: 0px;
	position: relative;
	background-color: #fdfdfd;
	color: #212121;
	justify-content: center;
	border-radius: 0;
}
.bar :is(button, select, label):focus {
	box-shadow:	inset 0px 0px 0 3px #666;
	outline: none;
}
div.bar button:hover,
div.bar label:hover {
	background-color: #eee;
}
div.bar button:disabled {
	cursor: default;
	opacity: 0.5;
}
div.bar button:disabled:hover {
	background-color: #fdfdfd;
}
header.bar button,
footer.bar :is(button, label),
footer.bar input[type=text] {
	border-color: #212112;
	background: #333;
	color: #888;
}
header.bar button.on,
header.bar button.onon,
footer.bar button.on {
	color: #ddd;
}
.bar button:first-child,
.bar label:first-child {
	border-top-left-radius: .5rem;
	border-bottom-left-radius: .5rem;
}
/* ... */

